# whisper_training

./: .gitignore  README.md  dlmodel.py  fwhisper_test.py  main.py  openvino_test.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: model-download.yml
